# pj-aidev-master-thesis

./: .gitignore  README.md  config.py  coverage.json  model_utils.py  models_config.json  ollama_client.py  prompt_engineering_comparison.py  pyproject.toml  run_analysis.py  run_cross_model_analysis.py  run_test_case_generator.py
.github/workflows/: gemini-pr-review.yml  pr-agent.yml
analysis/: __init__.py  analysis_reporter.py  cross_model_plots.py  data_loader.py  dataset_aware_plots.py  humanevalpack_plots.py  problem_classifier.py  traditional_plots.py
batch/: README.md  run_batch_test_case_generator.py
data/generated_tests_gpt-4-1/: test_humaneval_147_success.py  test_humaneval_147_success.stats.json  test_humaneval_1_false.py  test_humaneval_1_false.stats.json  test_humaneval_46_success.py  test_humaneval_46_success.stats.json  test_humaneval_75.py  test_humaneval_75.stats.json  test_humaneval_99_success.py  test_humaneval_99_success.stats.json
dataset/: HumanEval_formatted.json  HumanEval_formatted.yaml
evaluator/: __init__.py  bug_detector.py  failure_analyzer.py  test_runner.py
generator/: __init__.py  ast_analyzer.py
llm_clients/: __init__.py  anthropic_client.py  base.py  factory.py  gemini_client.py  openai_client.py
problem_classification/: show_problem_classification.py
prompts/: README.md  __init__.py  ast.txt  basic.txt  docstring.txt  docstring_ast.txt  fix_ast.txt  fix_basic.txt  fix_docstring.txt  fix_docstring_ast.txt  prompt_builder.py
utils/: __init__.py  exceptions.py  file_utils.py
(+33 files in other folders)
