[project]
name = "pj-aidev-PromptEng2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.7.0",
    "datasets>=2.14.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "seaborn>=0.12.0",
    "flake8>=6.0.0",
    "flake8-cognitive-complexity>=0.1.0",
    "google-generativeai>=0.8.5",
    "openai>=1.0.0",
]
